feat(api): Add description support for json schemas
